Fixed the television and home alignment issue on medium devices #styling

--- a/src/radio/Radio.css
+++ b/src/radio/Radio.css
@@ -1,4 +1,4 @@
-.card {
+.radio .card {
     width: 500px;
     margin: 5rem auto 5rem auto;
     background: var(--black) !important;
@@ -12,8 +12,8 @@
 
 
 @media only screen and (min-width: 48em) {
-    .card {
+    .radio .card {
         width: 400px !important;
-        margin: 5rem auto 5rem auto !important;
+        margin: 8rem auto 8rem auto !important;
     }
 }
